--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
+#include <iostream.h>
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+main()
+{
+    for(;;)
+    {
+        cout << "Hello World! ";
+    }}
